objects/tdc_cti__General_Setting__c/tdc_cti__General_Setting__c.object-meta.xml
<CustomObject>
    <label>CTI General Setting</label>
    <nameField>
        <label>CTI General Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTI General Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>