objects/tdc_cti__General_Setting__c/fields/tdc_cti__BlackListed_Numbers__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__BlackListed_Numbers__c</fullName>
    <description>You can enter multiple numbers comma-separated. Incoming calls from these numbers will not be received and there will be no tracking of such calls in Salesforce.</description>
    <label>BlackListed Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>