objects/tdc_cti__General_Setting__c/fields/tdc_cti__Call_Log_Subject__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Log_Subject__c</fullName>
    <label>Call Log Subject</label>
    <type>TextArea</type>
</CustomField>