objects/tdc_cti__General_Setting__c/fields/tdc_cti__CTI_App_Owner__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__CTI_App_Owner__c</fullName>
    <label>CTI  App Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>