objects/tdc_cti__General_Setting__c/fields/tdc_cti__List_View_Query__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__List_View_Query__c</fullName>
    <label>List View Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>