objects/tdc_cti__General_Setting__c/fields/tdc_cti__Mute_Notify_Call__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Mute_Notify_Call__c</fullName>
    <description>This field is used to mute incoming notify call ring sound.</description>
    <label>Mute Notify Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>