objects/tdc_cti__General_Setting__c/fields/tdc_cti__Send_Missed_Call_Notification__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Send_Missed_Call_Notification__c</fullName>
    <description>Select an option for whom to send missed call notifications.</description>
    <label>Send Missed Call Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main User</fullName>
                <default>true</default>
                <label>Main User</label>
            </value>
            <value>
                <fullName>Main User + All Queue Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>