objects/tdc_cti__General_Setting__c/fields/tdc_cti__SoftPhone_Navigation_Menu__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__SoftPhone_Navigation_Menu__c</fullName>
    <description>This field is used to store softphone navigation icon values like Home,DialPad,Call Logs,Inbox,Settings.</description>
    <label>SoftPhone Navigation Menu</label>
    <type>TextArea</type>
</CustomField>