objects/tdc_cti__General_Setting__c/fields/tdc_cti__Unknown_Contact_Task_Fields_Mapping__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Unknown_Contact_Task_Fields_Mapping__c</fullName>
    <description>This field is used to store contact and task fields mapping.</description>
    <label>Unknown Contact Task Fields Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>