objects/tdc_cti__General_Setting__c/fields/tdc_cti__Unknown_Lead_Field_Mapping_Incoming__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Unknown_Lead_Field_Mapping_Incoming__c</fullName>
    <label>Unknown Lead Field Mapping Incoming</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>