objects/tdc_cti__General_Setting__c/fields/tdc_cti__Unknown_Lead_Task_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Unknown_Lead_Task_Field_Mapping__c</fullName>
    <description>This field is used to store lead and task fields mapping.</description>
    <label>Unknown Lead Task Field Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>