objects/tdc_cti__General_Setting__c/fields/tdc_cti__Voice_drop_text__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Voice_drop_text__c</fullName>
    <label>Voice drop text</label>
    <type>TextArea</type>
</CustomField>