objects/tdc_cti__General_Setting__c/fields/tdc_cti__Voicemails_History_View__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Voicemails_History_View__c</fullName>
    <label>Voicemails History View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>