objects/tdc_cti__General_Setting__c/listViews/CTI_Incoming_Call_Queue_General_Setting.listView-meta.xml
<ListView>
    <fullName>CTI_Incoming_Call_Queue_General_Setting</fullName>
    <filterScope>Queue</filterScope>
    <label>CTI Incoming Call Queue</label>
    <queue>CTI_Incoming_Call_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>